# indic-dictation

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  app_launcher.py  pyproject.toml
SwiftMarathiDictation/: Package.resolved  Package.swift
SwiftMarathiDictation/Packaging/: Info.plist
SwiftMarathiDictation/Resources/Icons/: AppIcon.icns
SwiftMarathiDictation/Sources/MarathiDictationApp/: AppDelegate.swift  AudioInputDeviceManager.swift  AudioRecorder.swift  FunctionKeyMonitor.swift  LiveAudioStreamer.swift  Permissions.swift  PolishClient.swift  SarvamAPIKeyStore.swift  SarvamClient.swift  SarvamStreamingClient.swift  Settings.swift  ShortcutPoller.swift  ShortcutStateMachine.swift  StreamingAudioBuffer.swift  VoiceIndicator.swift  WakeWordEngine.swift  WakeWordListener.swift  WakeWordResources.swift  WakeWordSampleRecorder.swift
SwiftMarathiDictation/Sources/MarathiDictationApp/Resources/WakeWord/: hey_vaani.onnx
SwiftMarathiDictation/scripts/: create_dmg.sh  generate_sarvam_hard_negative_samples.py  generate_sarvam_hard_negative_samples.sh  generate_synthetic_wakeword_samples.sh  notarize_dmg.sh  package_app.sh  train_wakeword_from_samples.sh
assets/icons/: app-icon.icns
scripts/: test_sarvam_streaming.py
src/marathi_dictation/: __init__.py  cli.py  gui.py  hotkey.py  indicator.py  mac_paste.py  menubar.py  paths.py  sarvam_client.py  settings.py
